--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,9 @@
 
 body {
     background: saddlebrown;
+    
 }
+
 
 h1 {
     text-align: center;
@@ -16,6 +18,10 @@ h1 {
 .container {
     display: flex;
     flex-direction: row;
+    position: absolute;
+    top: 200px;
+    z-index: -1;
+    flex-wrap: wrap;
 }
 
 .bookContainer {
@@ -24,10 +30,11 @@ h1 {
     background: orange;
     border-radius: .5rem;
     width: 250px;
-    height: 200px;
+    height: 250px;
     text-align: center;
     font-size: 20px;
     line-height: 50px;
+    border: solid 1px black;
 }
 
 
@@ -54,6 +61,27 @@ li {
     background: chocolate;
 }
 
+.readBtn {
+    background: green;
+    margin-right: .5rem;
+    border-radius: 7px;
+    padding: 5px;
+}
+
+.readBtn:hover {
+    background: #0077ff;
+}
+
+.deleteBtn {
+    background: red;
+    border-radius: 7px;
+    padding: 5px;
+}
+
+.deleteBtn:hover {
+    background: #797979;
+}
+
 .formItem {
     display: block;
     background: white;
@@ -64,11 +92,14 @@ li {
     background: white;
     padding: 50px;
     display: none;
+    border-radius: 7px;
+    border: 1px solid black;
 }
 
 #popupContainer {
     margin-left: 42%;
     width: 15%;
+
 }
 
 form, input,h2 {
